# ZanzAMP

.github/workflows/: main.yml
ZanzAMP_Professional_Package/: CMakeLists.txt  INSTRUCOES_TECNICAS.md  README.md
ZanzAMP_Professional_Package/Installer/: ZanzAMP_Installer.iss
ZanzAMP_Professional_Package/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
